fix: page icon.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alexandre Reis — Backend Engineer</title>
-        <link rel="icon" href="assets/logo.png" />
+        <link rel="icon" href="assets/logo_black.png" />
     <script src="https://cdn.tailwindcss.com"></script>
         <style>
             /* Offset anchored elements so sticky header doesn't cover them.
