fix(content): change position

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <div class="bg-gray-800 border border-gray-700 rounded-2xl p-6">
                 <div class="flex items-start justify-between">
                     <div>
-                        <div class="text-xl font-semibold text-gray-100">Kaizen Gaming (Betano / Stoiximan Group) — Senior .NET Backend Engineer</div>
+                        <div class="text-xl font-semibold text-gray-100">Kaizen Gaming (Betano / Stoiximan Group) — .NET Backend Engineer</div>
                         <div class="text-sm text-gray-400">2022 — Present</div>
                     </div>
                 </div>
